# msp430fr247x-blinky

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  docker-compose.yml  memory.x  rust-toolchain.toml
.github/workflows/: rust.yml
examples/: blinky.rs  buttons.rs  override-default-handler.rs  timer-oncecell.rs  timer-unsafe.rs  timer.rs
examples/temp-hal/: hal.rs  main.rs
src/: main.rs
