[package]
authors = ["Enmanuel Parache <enmanuelparache@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "msp430fr2476-blinky"
version = "0.1.0"

[dependencies]
msp430 = { version = "0.4.0", features = ["critical-section-single-core"] }
msp430-rt = "0.4.0"
panic-msp430 = "0.4.0"

# Use an existing PAC to ensure examples and the crate itself compiles. If
# targeting a different device, you may need to change the version of your
# crate. Your PAC must be generated with svd2rust version v0.20.0 or later.
[dependencies.msp430fr247x]
# When developing for another target you can use a local crate with path
# path = "../msp430fr247x"
version = "0.1.0"
features = ["rt", "critical-section"]


[dev-dependencies]
embedded-hal = "=1.0.0-alpha.8"
nb = "1.0.0"
fixed = "1.6.0"
fixed-macro = "1.1.1"

[dev-dependencies.once_cell]
version = "1.7.2"
default-features = false

[patch.crates-io.fixed-macro]
git = "https://github.com/kvinwang/fixed-macro"
version = "1.1.1"


# Required for `cargo fix` to work!
[[bin]]
name = "msp430fr2476-blinky"
test = false
bench = false

[profile.release]
opt-level = "s" # Size is more important than performance on MSP430.
codegen-units = 1 # Better size optimization.
lto = "fat" # _Much_ better size optimization.
# debug = true # Debug _can_ slightly increase size of .text segment.

[profile.dev]
opt-level = "s" # Size is more important than performance on MSP430.
codegen-units = 1 # Better size optimization.
lto = "fat" # _Much_ better size optimization.
debug = true # Debug _can_ slightly increase size of .text segment.
